moved blockquote to bodytext

--- a/_includes/elements/two-column-body.html
+++ b/_includes/elements/two-column-body.html
@@ -13,6 +13,7 @@
             <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</li>
         </ol>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <blockquote>This is a challenging time for our nation and for our Army. My highest priority will be working to ensure Soldiers receive the necessary resources and training to remain the greatest land power in the world. I am confident our Army will fight and win wherever our nation asks, whenever our country calls.</blockquote>
     </div>
     <div class="right-column">
         <div class="top-stories">
