--- a/_scss/base/_bodytext.scss
+++ b/_scss/base/_bodytext.scss
@@ -58,11 +58,26 @@
     }
   }
 }
+@mixin bodytext-blockquote() {
+  blockquote {
+    border-left: 4px solid map-get($army-branding, gold);
+    padding: 5px 30px;
+    margin: 0 0 1.25em 0;
+    font-style: italic;
+    font-size: 1.25em;
+    line-height: 1.625;
+    color: map-get($army-branding, grey50);
+    &:before, &:after {
+      display: none;
+    }
+  }
+}
 
 // include new bodytext element mixins here...
 @mixin bodytext() {
   @include bodytext-links();
   @include bodytext-list();
+  @include bodytext-blockquote();
 }
 
 .bodytext-links {
@@ -71,6 +86,10 @@
 
 .bodytext-list {
   @include bodytext-list();
+}
+
+.bodytext-blockquote {
+  @include bodytext-blockquote();
 }
 
 .bodytext {
