Updating the leader's name. We should put a placeholder image here.

--- a/_includes/elements/leaders.html
+++ b/_includes/elements/leaders.html
@@ -3,7 +3,7 @@
         <img class="leaders-img" onerror="this.style.display = 'none'" src="https://www.army.mil/e2/c/images/assetUploads/5166/custom.jpg" alt="Maj. Gen. Gary J. Volesky">
         <span class="leaders-text">
             <span class="leaders-heading">Eagle 6</span>
-            <span class="leaders-title">Maj. Gen. Gary J. Volesky</span>
+            <span class="leaders-title">Maj. Gen. Andrew P. Poppas</span>
         </span>
         <div class="leaders-bio btn">
             <div>
