--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -40,7 +40,7 @@
                       <label for="menu-item-media" role="menuitem">MEDIA<span></span></label>
                       <ul>
                         <li><a href="/photos">Photos</a></li>
-                        <li><a href="https://www.youtube.com/user/usarmynews">Videos</a></li>
+                        <li><a href="https://www.youtube.com/user/usarmy">Videos</a></li>
                         <li><a href="//www.army.mil/media/publications/">Publication</a></li>
                       </ul>
                   </li>
