--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -35,6 +35,10 @@
                 {% include elements/social-media.html %}
             </div>
             <div class="elem">
+                <h4>ARMY STAR LOGOS</h4>
+                {% include armystarlogos.html %}
+            </div>
+            <div class="elem">
                 <h4>ACCORDION</h4>
                 {% include elements/accordion.html %}
             </div>
