add Soldier and Family Resources link to main menu

--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -23,6 +23,7 @@
                         <li><a href="//www.army.mil/info/organization/">Organization</a></li>
                         <li><a href="//www.army.mil/info/institution/publicAffairs/">Public Affairs</a></li>
                         <li><a href="//www.army.mil/info/references/">References</a></li>
+                        <li><a href="//www.army.mil/soldierresources/">Soldier and Family Resources</a></li>
                       </ul>
                   </li>
                   <li>
