remove secondary colors

--- a/e2/css/rv7/upgrade/style.scss
+++ b/e2/css/rv7/upgrade/style.scss
@@ -58,7 +58,7 @@ body {
     text-decoration: none;
 
     &:hover {
-      color: map-get($army-branding, mediumcamo);
+      color: map-get($army-branding, grey60);
     }
   }
 
