Updated global navigation

--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -20,10 +20,10 @@
                       <input type="checkbox" id="menu-item-about" />
                       <label for="menu-item-about" role="menuitem">ABOUT<span></span></label>
                       <ul>
-                        <li><a href="//www.army.mil/info/organization/">Organization</a></li>
-                        <li><a href="//www.army.mil/info/institution/publicAffairs/">Public Affairs</a></li>
-                        <li><a href="//www.army.mil/info/references/">References</a></li>
+                        <li><a href="//www.army.mil/about/">Who We Are</a></li>
+                        <li><a href="//www.army.mil/organization/">Organization</a></li>
                         <li><a href="//www.army.mil/soldierresources/">Soldier and Family Resources</a></li>
+                        <li><a href="//www.army.mil/a-z/">A-Z</a></li>
                       </ul>
                   </li>
                   <li>
@@ -42,7 +42,7 @@
                       <ul>
                         <li><a href="/photos">Photos</a></li>
                         <li><a href="https://www.youtube.com/user/usarmy">Videos</a></li>
-                        <li><a href="//www.army.mil/media/publications/">Publication</a></li>
+                        <li><a href="//www.army.mil/publications/">Publication</a></li>
                       </ul>
                   </li>
               </ul>
@@ -90,12 +90,12 @@
               </ul>
           </div>
           <ul class="quicklinks">
-            <li><a href="//www.army.mil/info/a-z/">ARMY A-Z</a></li>
-            <li><a href="//www.army.mil/socialmedia/">SOCIAL MEDIA</a></li>
-            <li><a href="https://www.us.army.mil/">AKO</a></li>
             <li><a href="/contact">CONTACT US</a></li>
+            <li><a href="//www.army.mil/publicAffairs/">Public Affairs</a></li>
+            <li><a href="//www.army.mil/socialmedia/">SOCIAL MEDIA Guide</a></li>
             <li><a href="//www.army.mil/join/">JOIN</a></li>
-            <li><a href="//www.army.mil/faq/">FAQS</a></li>
+            <li><a href="//www.army.mil/faq/">FAQs</a></li>
+            <li><a href="https://www.us.army.mil/">AKO</a></li>
           </ul>
         </div>
     </div>
