updated the Intagram link

--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -83,7 +83,7 @@
                         <a rel="noopener noreferrer" target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter"><span>Official U.S. Army Flickr</span></a>
                       </li>
                       <li class="social-button instagram-button">
-                        <a rel="noopener noreferrer" target="_blank" href="https://instagram.com/usarmy"><span>Official U.S. Army Instagram</span></a>
+                        <a rel="noopener noreferrer" target="_blank" href="https://www.instagram.com/usarmy/"><span>Official U.S. Army Instagram</span></a>
                       </li>
                     </ul>
                   </li>
