--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -23,7 +23,7 @@
                         <li><a href="//www.army.mil/about/">Who We Are</a></li>
                         <li><a href="//www.army.mil/organization/">Organization</a></li>
                         <li><a href="//www.army.mil/soldierresources/">Soldier and Family Resources</a></li>
-                        <li><a href="//www.army.mil/a-z/">A-Z</a></li>
+                        <li><a href="//www.army.mil/a-z/">Army A-Z</a></li>
                       </ul>
                   </li>
                   <li>
@@ -42,7 +42,7 @@
                       <ul>
                         <li><a href="/photos">Photos</a></li>
                         <li><a href="https://www.youtube.com/user/usarmy">Videos</a></li>
-                        <li><a href="//www.army.mil/publications/">Publication</a></li>
+                        <li><a href="//www.army.mil/publications/">Publications</a></li>
                       </ul>
                   </li>
               </ul>
