--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -79,12 +79,15 @@
                       <li class="social-button youtube-button">
                         <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/USarmy"><span>Official U.S. Army Youtube</span></a>
                       </li>
-                      <li class="social-button flickr-button">
-                        <a rel="noopener noreferrer" target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter"><span>Official U.S. Army Flickr</span></a>
-                      </li>
                       <li class="social-button instagram-button">
                         <a rel="noopener noreferrer" target="_blank" href="https://www.instagram.com/usarmy/"><span>Official U.S. Army Instagram</span></a>
                       </li>
+                      <li class="social-button flickr-button">
+                        <a rel="noopener noreferrer" target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter"><span>Official U.S. Army Flickr</span></a>
+                      </li>
+                      <li class="social-button linkedin-button">
+                        <a rel="noopener noreferrer" target="_blank" href="https://www.linkedin.com/company/us-army"><span>Official U.S. Army LinkedIn</span></a>
+                      </li>  
                     </ul>
                   </li>
               </ul>
