make the relative paths in the menu absolute, since it could be imported by other organizations (on other domains)

--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -30,17 +30,17 @@
                       <input type="checkbox" id="menu-item-news" />
                       <label for="menu-item-news" role="menuitem">NEWS<span></span></label>
                       <ul>
-                        <li><a href="/news">Army Worldwide</a></li>
-                        <li><a href="/news/newsreleases">Press Releases</a></li>
-                        <li><a href="/standto">STAND-TO!</a></li>
-                        <li><a href="https://www.army.mil/soldiers">Soldier Features</a></li>
+                        <li><a href="//www.army.mil/news">Army Worldwide</a></li>
+                        <li><a href="//www.army.mil/news/newsreleases">Press Releases</a></li>
+                        <li><a href="//www.army.mil/standto">STAND-TO!</a></li>
+                        <li><a href="//www.army.mil/soldiers">Soldier Features</a></li>
                       </ul>
                   </li>
                   <li>
                       <input type="checkbox" id="menu-item-media" />
                       <label for="menu-item-media" role="menuitem">MEDIA<span></span></label>
                       <ul>
-                        <li><a href="/photos">Photos</a></li>
+                        <li><a href="//www.army.mil/photos">Photos</a></li>
                         <li><a href="https://www.youtube.com/user/usarmy">Videos</a></li>
                         <li><a href="//www.army.mil/publications/">Publications</a></li>
                       </ul>
@@ -93,7 +93,7 @@
               </ul>
           </div>
           <ul class="quicklinks">
-            <li><a href="/contact">CONTACT US</a></li>
+            <li><a href="//www.army.mil/contact">CONTACT US</a></li>
             <li><a href="//www.army.mil/publicAffairs/">Public Affairs</a></li>
             <li><a href="//www.army.mil/socialmedia/">SOCIAL MEDIA Guide</a></li>
             <li><a href="//www.army.mil/join/">JOIN</a></li>
