Updated template for imporived readability and manuerverability

--- a/_scss/elements/_rich-text.scss
+++ b/_scss/elements/_rich-text.scss
@@ -45,6 +45,7 @@
     text-align: left;
   }
 
+  .ql-editor blockquote,
   blockquote {
     border-left: 4px solid map-get($army-branding, gold);
     padding: 0 0 0 1.25em;
