--- a/_scss/elements/_photo-slideshow.scss
+++ b/_scss/elements/_photo-slideshow.scss
@@ -22,13 +22,13 @@
         line-height: 0;
         position: relative;
         text-align: center;
-        padding: 0 0 66.667%; // 3:2 ratio
+        padding: 0 0 66.25%; // slightly wider than 3:2 ratio
         overflow: hidden;
-        background-color: #000;
+        background-color: #dddddd;
         
         img {
           max-width: 100%;
-          max-height: 110%; // helps fill width when image is taller than ratio
+          max-height: 101%; // helps fill width when image is slightly taller than ratio
           position: absolute;
           top: -1000px;
           bottom: -1000px;
@@ -101,7 +101,7 @@
   }
 
   .ss-move {
-    background: map-get($army-branding, black);
+    background-color: rgba(0,0,0,0.5);
     cursor: pointer;
     margin: -29px 0 0; // half = 20px padding top plus 9px (1/2 of span height)
     padding: 20px;
@@ -110,7 +110,7 @@
 
     &:hover,
     &:focus {
-      background-color: $captions-background-color;
+      background-color: rgba(0,0,0,0.9);
     }
 
     .ss-move-button {
