--- a/_scss/elements/_rich-text.scss
+++ b/_scss/elements/_rich-text.scss
@@ -94,9 +94,7 @@
             right: -2000000px;
             margin: auto;
             position: absolute;
-            min-width: 100%;
-            min-height: 100%;
-            zoom: .005;
+            max-width: 100%;
           }
 
           a {
@@ -148,10 +146,9 @@
           img {
             width: auto;
             max-width: 100%;
-            max-height: 50vh;
+            max-height: 100vh;
             position: static;
             display: block;
-            zoom: 2;
             min-width: 0;
             min-height: 0;
           }
