updated No FEAR Act link to www.army.mil/nofearact

--- a/_includes/elements/footer.html
+++ b/_includes/elements/footer.html
@@ -26,7 +26,7 @@
             <li><a href="/terms">Terms Of Use</a></li>
             <li><a href="http://dodcio.defense.gov/DoDSection508/Std_Stmt.aspx">Accessibility/Section 508</a></li>
             <li><a href="https://www.rmda.army.mil/foia/RMDA-FOIA-Division.html">FOIA</a></li>
-            <li><a href="http://www.asamra.army.mil/nofear.html">No FEAR Act</a></li>
+            <li><a href="www.army.mil/nofearact">No FEAR Act</a></li>
         </ul>
     </section>
 </footer>
