--- a/_scss/elements/_photo-slideshow.scss
+++ b/_scss/elements/_photo-slideshow.scss
@@ -19,22 +19,16 @@
       
       .img-container {
         display: block;
-        line-height: 0;
         position: relative;
         text-align: center;
-        padding: 0 0 66.25%; // slightly wider than 3:2 ratio
         overflow: hidden;
-        background-color: #dddddd;
+        background-color: #000;
         
         img {
           max-width: 100%;
-          max-height: 101%; // helps fill width when image is slightly taller than ratio
-          position: absolute;
-          top: -1000px;
-          bottom: -1000px;
-          left: -1000px;
-          right: -1000px;
+          max-height: 75vh;
           margin: auto;
+          display: block;
         }
       }
     }
