--- a/_scss/elements/_rich-text.scss
+++ b/_scss/elements/_rich-text.scss
@@ -142,15 +142,17 @@
         .img-container {
           padding: 0;
           height: auto;
-          display: inline-block;
+          background-color: transparent;
+          a {
+            display: inline-block;
+            position: relative;
+          }
           img {
-            width: auto;
-            max-width: 100%;
-            max-height: 100vh;
             position: static;
             display: block;
-            min-width: 0;
-            min-height: 0;
+            width: auto;
+            max-width: 100%;
+            max-height: 75vh;
           }
         }
       }
