default img link to open original in new tab, limit max-size of portrait imgs, and update expand icon in SVG sprite

--- a/_scss/elements/_photo-slideshow.scss
+++ b/_scss/elements/_photo-slideshow.scss
@@ -29,6 +29,10 @@
           max-height: 75vh;
           margin: auto;
           display: block;
+
+          @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
+            max-height: 550px;
+          }
         }
       }
     }
