--- a/_scss/base/_variables.scss
+++ b/_scss/base/_variables.scss
@@ -34,5 +34,5 @@ $container-sm: 670px;
 // ----------------------------------------------------------------------
 // Images 
 // ----------------------------------------------------------------------
-$social-button-sprite: url("/e2/images/rv7/mobile_redesign_sprite_icons_v3.svg");
-$standto-image: url("/e2/images/rv7/stand_to_mosaic.jpg");
+$social-button-sprite: url("https://www.army.mil/e2/images/rv7/mobile_redesign_sprite_icons_v3.svg");
+$standto-image: url("https://www.army.mil/e2/images/rv7/stand_to_mosaic.jpg");
