--- a/_scss/base/_fonts.scss
+++ b/_scss/base/_fonts.scss
@@ -3,9 +3,9 @@
 /* Webfont: Overpass-Bold */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Bold.woff') format('woff'), /* Modern Browsers */
-         url('/e2/fonts/rv7/overpass/Overpass-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/e2/fonts/rv7/overpass/Overpass-Bold.svg#Overpass-Bold') format('svg'); /* Legacy iOS */
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Bold.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Bold.svg#Overpass-Bold') format('svg'); /* Legacy iOS */
     font-style: normal;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -14,9 +14,9 @@
 /* Webfont: Overpass-BoldItalic */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.woff') format('woff'), /* Modern Browsers */
-         url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/e2/fonts/rv7/overpass/Overpass-Bold-Italic.svg#Overpass-BoldItalic') format('svg'); /* Legacy iOS */
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.svg#Overpass-BoldItalic') format('svg'); /* Legacy iOS */
     font-style: italic;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -25,9 +25,9 @@
 /* Webfont: Overpass-Reg */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Regular.woff') format('woff'), /* Modern Browsers */
-         url('/e2/fonts/rv7/overpass/Overpass-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/e2/fonts/rv7/overpass/Overpass-Regular.svg#Overpass-Regular') format('svg'); /* Legacy iOS */
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Regular.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Regular.svg#Overpass-Regular') format('svg'); /* Legacy iOS */
     font-style: normal;
     font-weight: 600;
     text-rendering: optimizeLegibility;
@@ -36,9 +36,9 @@
 /* Webfont: Overpass-Italic */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Italic.woff') format('woff'), /* Modern Browsers */
-         url('/e2/fonts/rv7/overpass/Overpass-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/e2/fonts/rv7/overpass/Overpass-Italic.svg#Overpass-Italic') format('svg'); /* Legacy iOS */
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Italic.svg#Overpass-Italic') format('svg'); /* Legacy iOS */
     font-style: italic;
     font-weight: 600;
     text-rendering: optimizeLegibility;
@@ -47,9 +47,9 @@
 /* Webfont: Overpass-Light */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Light.woff') format('woff'), /* Modern Browsers */
-         url('/e2/fonts/rv7/overpass/Overpass-Light.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/e2/fonts/rv7/overpass/Overpass-Light.svg#Overpass-Light') format('svg'); /* Legacy iOS */
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Light.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Light.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Light.svg#Overpass-Light') format('svg'); /* Legacy iOS */
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -58,9 +58,9 @@
 /* Webfont: Overpass-LightItalic */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.woff') format('woff'), /* Modern Browsers */
-         url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/e2/fonts/rv7/overpass/Overpass-Light-Italic.svg#Overpass-LightItalic') format('svg'); /* Legacy iOS */
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.svg#Overpass-LightItalic') format('svg'); /* Legacy iOS */
     font-style: italic;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -69,9 +69,9 @@
 /* Webfont: Overpass-ExtraLight */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.woff') format('woff'), /* Modern Browsers */
-         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight.svg#Overpass-ExtraLight') format('svg'); /* Legacy iOS */
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.svg#Overpass-ExtraLight') format('svg'); /* Legacy iOS */
     font-style: normal;
     font-weight: 300;
     text-rendering: optimizeLegibility;
@@ -80,9 +80,9 @@
 /* Webfont: Overpass-ExtraLightItalic */
 @font-face {
     font-family: 'Overpass';
-    src: url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.woff') format('woff'), /* Modern Browsers */
-         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('/e2/fonts/rv7/overpass/Overpass-ExtraLight-Italic.svg#Overpass-ExtraLightItalic') format('svg'); /* Legacy iOS */
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.svg#Overpass-ExtraLightItalic') format('svg'); /* Legacy iOS */
     font-style: italic;
     font-weight: 300;
     text-rendering: optimizeLegibility;
