changed updated AKO to relative

--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -98,7 +98,7 @@
             <li><a href="//www.army.mil/socialmedia/">SOCIAL MEDIA Guide</a></li>
             <li><a href="//www.army.mil/join/">JOIN</a></li>
             <li><a href="//www.army.mil/faq/">FAQs</a></li>
-            <li><a href="https://amid.us.army.mil/">AKO</a></li>
+            <li><a href="//amid.us.army.mil/">AKO</a></li>
           </ul>
         </div>
     </div>
