updated quicklinks to use https

--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -93,12 +93,12 @@
               </ul>
           </div>
           <ul class="quicklinks">
-            <li><a href="//www.army.mil/contact">CONTACT US</a></li>
-            <li><a href="//www.army.mil/publicAffairs/">Public Affairs</a></li>
-            <li><a href="//www.army.mil/socialmedia/">SOCIAL MEDIA Guide</a></li>
-            <li><a href="//www.army.mil/join/">JOIN</a></li>
-            <li><a href="//www.army.mil/faq/">FAQs</a></li>
-            <li><a href="//amid.us.army.mil/">AKO</a></li>
+            <li><a href="https://www.army.mil/contact">CONTACT US</a></li>
+            <li><a href="https://www.army.mil/publicAffairs/">Public Affairs</a></li>
+            <li><a href="https://www.army.mil/socialmedia/">SOCIAL MEDIA Guide</a></li>
+            <li><a href="https://www.army.mil/join/">JOIN</a></li>
+            <li><a href="https://www.army.mil/faq/">FAQs</a></li>
+            <li><a href="https://amid.us.army.mil/">AKO</a></li>
           </ul>
         </div>
     </div>
