update news/announcements styles to display:flex, update NPM dependencies, and add favicon

--- a/_includes/elements/news.html
+++ b/_includes/elements/news.html
@@ -1,10 +1,5 @@
 <div class="news">
-    <div class="heading-container">
-        <h4>NEWS</h4>
-        <div class="right">
-            <a href="https://www.army.mil/news/">View All News<span class="view-more-arrow-sm"></span></a>
-        </div>
-    </div>
+    <h4>NEWS</h4>
     <!-- remove class no-dates to see dates -->
     <ul class="no-dates">
         <li>
@@ -62,4 +57,7 @@
             </a>
         </li>
     </ul>
+    <div class="view-all">
+        <a href="https://www.army.mil/news/">VIEW ALL NEWS</a>
+    </div>
 </div>
