make all the Army.mil links in nav https

--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -20,29 +20,29 @@
                       <input type="checkbox" id="menu-item-about" />
                       <label for="menu-item-about" role="menuitem">ABOUT<span></span></label>
                       <ul>
-                        <li><a href="//www.army.mil/about/">Who We Are</a></li>
-                        <li><a href="//www.army.mil/organization/">Organization</a></li>
-                        <li><a href="//www.army.mil/soldierresources/">Soldier and Family Resources</a></li>
-                        <li><a href="//www.army.mil/a-z/">Army A-Z</a></li>
+                        <li><a href="https://www.army.mil/about/">Who We Are</a></li>
+                        <li><a href="https://www.army.mil/organization/">Organization</a></li>
+                        <li><a href="https://www.army.mil/soldierresources/">Soldier and Family Resources</a></li>
+                        <li><a href="https://www.army.mil/a-z/">Army A-Z</a></li>
                       </ul>
                   </li>
                   <li>
                       <input type="checkbox" id="menu-item-news" />
                       <label for="menu-item-news" role="menuitem">NEWS<span></span></label>
                       <ul>
-                        <li><a href="//www.army.mil/news">Army Worldwide</a></li>
-                        <li><a href="//www.army.mil/news/newsreleases">Press Releases</a></li>
-                        <li><a href="//www.army.mil/standto">STAND-TO!</a></li>
-                        <li><a href="//www.army.mil/soldiers">Soldier Features</a></li>
+                        <li><a href="https://www.army.mil/news">Army Worldwide</a></li>
+                        <li><a href="https://www.army.mil/news/newsreleases">Press Releases</a></li>
+                        <li><a href="https://www.army.mil/standto">STAND-TO!</a></li>
+                        <li><a href="https://www.army.mil/soldiers">Soldier Features</a></li>
                       </ul>
                   </li>
                   <li>
                       <input type="checkbox" id="menu-item-media" />
                       <label for="menu-item-media" role="menuitem">MEDIA<span></span></label>
                       <ul>
-                        <li><a href="//www.army.mil/photos">Photos</a></li>
+                        <li><a href="https://www.army.mil/photos">Photos</a></li>
                         <li><a href="https://www.youtube.com/user/usarmy">Videos</a></li>
-                        <li><a href="//www.army.mil/publications/">Publications</a></li>
+                        <li><a href="https://www.army.mil/publications/">Publications</a></li>
                       </ul>
                   </li>
               </ul>
@@ -51,21 +51,21 @@
                       <input type="checkbox" id="menu-item-leaders" />
                       <label for="menu-item-leaders" role="menuitem">LEADERS<span></span></label>
                       <ul>
-                        <li><a href="//www.army.mil/leaders/sa/">Secretary</a></li>
-                        <li><a href="//www.army.mil/leaders/usa/">Under Secretary</a></li>
-                        <li><a href="//www.army.mil/leaders/csa/">Chief of Staff</a></li>
-                        <li><a href="//www.army.mil/leaders/vcsa/">Vice Chief of Staff</a></li>
-                        <li><a href="//www.army.mil/leaders/sma/">Sergeant Major of the Army</a></li>
+                        <li><a href="https://www.army.mil/leaders/sa/">Secretary</a></li>
+                        <li><a href="https://www.army.mil/leaders/usa/">Under Secretary</a></li>
+                        <li><a href="https://www.army.mil/leaders/csa/">Chief of Staff</a></li>
+                        <li><a href="https://www.army.mil/leaders/vcsa/">Vice Chief of Staff</a></li>
+                        <li><a href="https://www.army.mil/leaders/sma/">Sergeant Major of the Army</a></li>
                       </ul>
                   </li>
                   <li>
                       <input type="checkbox" id="menu-item-features" />
                       <label for="menu-item-features" role="menuitem">FEATURES<span></span></label>
                       <ul>
-                        <li><a href="//www.army.mil/features/#valor">Valor</a></li>
-                        <li><a href="//www.army.mil/features/#events">Events</a></li>
-                        <li><a href="//www.army.mil/features/#heritage">Heritage</a></li>
-                        <li><a href="//www.army.mil/features/#army101">Army 101</a></li>
+                        <li><a href="https://www.army.mil/features/#valor">Valor</a></li>
+                        <li><a href="https://www.army.mil/features/#events">Events</a></li>
+                        <li><a href="https://www.army.mil/features/#heritage">Heritage</a></li>
+                        <li><a href="https://www.army.mil/features/#army101">Army 101</a></li>
                       </ul>
                   </li>
                   <li class="social">
