--- a/_scss/elements/_news.scss
+++ b/_scss/elements/_news.scss
@@ -95,6 +95,7 @@
         color: map-get($army-branding, grey40);
         font: 700 .813em $font-family;
         text-transform: uppercase;
+        padding-bottom: 20px;
       }
 
       .title {
