newsroom after-launch changes

--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -22,7 +22,7 @@
                       <ul>
                         <li><a href="https://www.army.mil/about/">Who We Are</a></li>
                         <li><a href="https://www.army.mil/organization/">Organization</a></li>
-                        <li><a href="https://www.army.mil/soldierresources/">Soldier and Family Resources</a></li>
+                        <li><a href="https://www.army.mil/qualityoflife/">Quality of Life</a></li>
                         <li><a href="https://www.army.mil/a-z/">Army A-Z</a></li>
                       </ul>
                   </li>
@@ -38,7 +38,7 @@
                   </li>
                   <li>
                       <input type="checkbox" id="menu-item-media" />
-                      <label for="menu-item-media" role="menuitem">MEDIA<span></span></label>
+                      <label for="menu-item-media" role="menuitem">MULTIMEDIA<span></span></label>
                       <ul>
                         <li><a href="https://www.army.mil/photos">Photos</a></li>
                         <li><a href="https://www.youtube.com/user/usarmy">Videos</a></li>
@@ -93,12 +93,13 @@
               </ul>
           </div>
           <ul class="quicklinks">
-            <li><a href="https://www.army.mil/contact">CONTACT US</a></li>
+            <li><a href="https://www.army.mil/newsroom">Newsroom</a></li>
             <li><a href="https://www.army.mil/publicAffairs/">Public Affairs</a></li>
             <li><a href="https://www.army.mil/socialmedia/">SOCIAL MEDIA Guide</a></li>
             <li><a href="https://www.army.mil/join/">JOIN</a></li>
             <li><a href="https://www.army.mil/faq/">FAQs</a></li>
             <li><a href="https://amid.us.army.mil/">AKO</a></li>
+            <li><a href="https://www.army.mil/contact">CONTACT US</a></li>
           </ul>
         </div>
     </div>
