use sass-embedded so jekyll uses Dart-Sass compiler, which is compatible with Core

--- a/_scss/base/_functions.scss
+++ b/_scss/base/_functions.scss
@@ -1,8 +1,10 @@
 
 
+@use "sass:math";
+
 $base-px: 16;
 
 @function em($px, $context: $base-px) {
-  @return #{$px/$context}em;
+  @return #{math.div($px, $context)}em;
 }
 
