separate span mixins from default grid-system styles, because of division operations

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -2,4 +2,5 @@
 // Layout
 // ----------------------------------------------------------------------
 @import "layout/grid-system";
+@import "layout/grid-system-spans";
 @import "layout/grid";
