replace span-clear mixin include with raw CSS on header.scss to keep division operations out for now

--- a/_scss/elements/_header.scss
+++ b/_scss/elements/_header.scss
@@ -286,7 +286,17 @@ header {
         *:before { @include box-sizing(border-box); }
 
         li {
-          @include span-clear(6);
+          // @include span-clear(6);
+          /* include span-clear styles directly, instead of using mixin... */
+          float: left;
+          padding-left: 15px;
+          padding-right: 15px;
+          width: 50%;
+          &:nth-child(2n+3) {
+            clear: left;
+          }
+          /* END span-clear styles */
+
           text-align: center;
 
           &:nth-child(2n) { padding-left: 5px; }
