add temp html change to test github-page workflows

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     {% include elements/upgrade.html %}
     {% include elements/header.html %}
     <div class="main" role="main">
+        <h5>Style Guide</h5>
         {{ content }}
     </div>
     {% include elements/footer.html %}
