added GI and variables

--- a/_scss/base/_variables.scss
+++ b/_scss/base/_variables.scss
@@ -16,7 +16,7 @@ $screen-lg-md: 1600px;
 // ----------------------------------------------------------------------
 // Font Families
 // ----------------------------------------------------------------------
-$font-family: "Overpass", sans-serif;
+$font-family: "GI";
 
 // ----------------------------------------------------------------------
 // Grid
