--- a/_scss/base/_fonts.scss
+++ b/_scss/base/_fonts.scss
@@ -1,11 +1,9 @@
-/* https://github.com/RedHatBrand/overpass */
-
 /* Webfont: Overpass-Bold */
 @font-face {
-    font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Bold.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Bold.svg#Overpass-Bold') format('svg'); /* Legacy iOS */
+    font-family: 'GI';
+    src: url($e2path + '/fonts/rv7/gi/G.I.-750.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/G.I.-750.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/G.I.-750.woff2') format('woff2');
     font-style: normal;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -13,10 +11,10 @@
 
 /* Webfont: Overpass-BoldItalic */
 @font-face {
-    font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.svg#Overpass-BoldItalic') format('svg'); /* Legacy iOS */
+    font-family: 'GI';
+    src: url($e2path + '/fonts/rv7/gi/G.I.-750Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/G.I.-750Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/G.I.-750Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -24,10 +22,10 @@
 
 /* Webfont: Overpass-Reg */
 @font-face {
-    font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Regular.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Regular.svg#Overpass-Regular') format('svg'); /* Legacy iOS */
+    font-family: 'GI';
+    src: url($e2path + '/fonts/rv7/gi/G.I.-530.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/G.I.-530.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/G.I.-530.woff2') format('woff2');
     font-style: normal;
     font-weight: 600;
     text-rendering: optimizeLegibility;
@@ -35,10 +33,10 @@
 
 /* Webfont: Overpass-Italic */
 @font-face {
-    font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Italic.svg#Overpass-Italic') format('svg'); /* Legacy iOS */
+    font-family: 'GI';
+    src: url($e2path + '/fonts/rv7/gi/G.I.-530Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/G.I.-530Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/G.I.-530Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: 600;
     text-rendering: optimizeLegibility;
@@ -46,10 +44,10 @@
 
 /* Webfont: Overpass-Light */
 @font-face {
-    font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Light.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Light.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Light.svg#Overpass-Light') format('svg'); /* Legacy iOS */
+    font-family: 'GI';
+    src: url($e2path + '/fonts/rv7/gi/G.I.-400.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/G.I.-400.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/G.I.-400.woff2') format('woff2');
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -57,33 +55,11 @@
 
 /* Webfont: Overpass-LightItalic */
 @font-face {
-    font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.svg#Overpass-LightItalic') format('svg'); /* Legacy iOS */
+    font-family: 'GI';
+    src: url($e2path + '/fonts/rv7/gi/G.I.-400.talic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/G.I.-400Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/G.I.-400Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: normal;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: Overpass-ExtraLight */
-@font-face {
-    font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.svg#Overpass-ExtraLight') format('svg'); /* Legacy iOS */
-    font-style: normal;
-    font-weight: 300;
-    text-rendering: optimizeLegibility;
-}
-
-/* Webfont: Overpass-ExtraLightItalic */
-@font-face {
-    font-family: 'Overpass';
-    src: url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.svg#Overpass-ExtraLightItalic') format('svg'); /* Legacy iOS */
-    font-style: italic;
-    font-weight: 300;
     text-rendering: optimizeLegibility;
 }
